Alot of changes

--- a/about.html
+++ b/about.html
@@ -75,14 +75,16 @@
 					</div>
 					<div class="aboutDesc">
 						<h3>My Story</h3>
-						<p>Born and raised in XXX, I've always felt compelled to put others before me from a young age.
-							I was lucky to find my passion
-							for spirituality and helping others early. This quickly moved me to be trained by the Life
-							Purpose Insitute and complete my
-							Master's degree in Philosophy from he University of Nevada, Reno.
+						<p>I originally sought this profession because I desired the experience of a spiritual awakening
+							and ultimately reaching enlightenment. In my pursuit of this goal, I encountered many
+							individuals from
+							various walks of life who have deep, spiritual problems. I soon became obsessed with helping
+							others solve these problems. Helping others find their path has been fulfilling for me and
+							I've made it my life purpose to help others live happier, peaceful lives.
 						</p>
-						<p>I'm a deeply spiritual women and I've made it my life purpose to help others live happier,
-							peaceful lives.</p>
+						<p> I am trained by the Life Purpose Institute and have a Master’s degree in Philosophy from the
+							University of Nevada, Reno.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -116,50 +118,6 @@
 					et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 		</div>
-		<!-- <div class="ourInstagram">
-			<div id="sb_instagram">
-				<div class="sb_instagram_header">
-					<a href="#" class="sbi_header_link">yogastudio</a>
-				</div>
-				<div id="sbi_images">
-					<div class="sbi_item sbi_type_image">
-						<div class="sbi_photo_wrap">
-							<a href="#" class="sbi_photo">
-								<img src="images/content/inst.jpg" alt="">
-							</a>
-						</div>
-					</div>
-					<div class="sbi_item sbi_type_image">
-						<div class="sbi_photo_wrap">
-							<a href="#" class="sbi_photo">
-								<img src="images/content/inst2.jpg" alt="">
-							</a>
-						</div>
-					</div>
-					<div class="sbi_item sbi_type_image">
-						<div class="sbi_photo_wrap">
-							<a href="#" class="sbi_photo">
-								<img src="images/content/inst3.jpg" alt="">
-							</a>
-						</div>
-					</div>
-					<div class="sbi_item sbi_type_image">
-						<div class="sbi_photo_wrap">
-							<a href="#" class="sbi_photo">
-								<img src="images/content/inst4.jpg" alt="">
-							</a>
-						</div>
-					</div>
-					<div class="sbi_item sbi_type_image">
-						<div class="sbi_photo_wrap">
-							<a href="#" class="sbi_photo">
-								<img src="images/content/inst5.jpg" alt="">
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
 	</section>
 
 	<footer id="footer" class="clear">
@@ -188,43 +146,14 @@
 	<div class="mobileMenu">
 		<ul>
 			<li><a href="index.html">home</a></li>
-			<li>
-				<a href="classes.html">Classes</a>
-				<ul class="sub-menu">
-					<li><a href="#">Outdoor</a></li>
-					<li><a href="#">Yoga</a></li>
-					<li><a href="#">Fitness</a></li>
-					<li class="menu-item-has-children">
-						<a href="#">Training</a>
-						<ul class="sub-menu">
-							<li><a href="#">Training 1</a></li>
-							<li><a href="#">Training 2</a></li>
-						</ul>
-					</li>
-				</ul>
+			<li class="current-menu-item">
+				<a href="about.html">About Me</a>
 			</li>
 			<li>
-				<a href="events.html">Events</a>
-				<ul class="sub-menu">
-					<li><a href="single-event.html">Single event</a></li>
-				</ul>
+				<a href="spiritual.html">Spiritual Coaching</a>
 			</li>
 			<li>
-				<a href="catalog.html">Shop</a>
-				<ul class="sub-menu">
-					<li><a href="cart.html">Cart</a></li>
-					<li><a href="cart-empty.html">Cart empty</a></li>
-					<li><a href="checkout.html">Checkout</a></li>
-					<li><a href="single-product.html">Single product</a></li>
-				</ul>
-			</li>
-			<li class="current-menu-item"><a href="about.html">About</a></li>
-			<li>
-				<a href="blog.html">Blog</a>
-				<ul class="sub-menu">
-					<li><a href="single-post.html">Single post</a></li>
-					<li><a href="404.html">404 page</a></li>
-				</ul>
+				<a href="events.html">Services</a>
 			</li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
