--- a/contact.html
+++ b/contact.html
@@ -177,45 +177,18 @@
 	<div class="mobileMenu">
 		<ul>
 			<li><a href="index.html">home</a></li>
-			<li>
-				<a href="classes.html">Classes</a>
-				<ul class="sub-menu">
-					<li><a href="#">Outdoor</a></li>
-					<li><a href="#">Yoga</a></li>
-					<li><a href="#">Fitness</a></li>
-					<li class="menu-item-has-children">
-						<a href="#">Training</a>
-						<ul class="sub-menu">
-							<li><a href="#">Training 1</a></li>
-							<li><a href="#">Training 2</a></li>
-						</ul>
+					<li>
+						<a href="about.html">About Me</a>
 					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="events.html">Events</a>
-				<ul class="sub-menu">
-					<li><a href="single-event.html">Single event</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="catalog.html">Shop</a>
-				<ul class="sub-menu">
-					<li><a href="cart.html">Cart</a></li>
-					<li><a href="cart-empty.html">Cart empty</a></li>
-					<li><a href="checkout.html">Checkout</a></li>
-					<li><a href="single-product.html">Single product</a></li>
-				</ul>
-			</li>
-			<li><a href="about.html">About</a></li>
-			<li>
-				<a href="blog.html">Blog</a>
-				<ul class="sub-menu">
-					<li><a href="single-post.html">Single post</a></li>
-					<li><a href="404.html">404 page</a></li>
-				</ul>
-			</li>
-			<li class="current-menu-item"><a href="contact.html">Contact</a></li>
+					<li>
+						<a href="spiritual.html">Spiritual Coaching</a>
+					</li>
+					<li>
+						<a href="events.html">Services</a>
+					</li>
+					<li class="current-menu-item">
+						<a href="contact.html">Contact</a>
+					</li>
 		</ul>
 	</div>
 </body>
