--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Lisa Price - Home</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--[if lte IE 8]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -62,20 +62,24 @@
 	</header>
 	<section class="container">
 		<div class="homeBxSliderWrap">
+			<style>
+				.bg {
+					background-image: url(images/content/home-4.jpg);
+				}
+
+				@media (max-width: 812px) {
+					.bg {
+						background-image: url(images/content/home-4-mobile2.jpg);
+					}
+				}
+			</style>
 			<div class="homeBxSlider">
-				<div class="slide active" data-slide="0" style="background-image: url(images/content/home-4.jpg);">
+				<div class="slide active bg" data-slide="0">
 					<div class="slideDesc">
-						<h2>Find Your Life Purpose<br></h2>
-						<!-- <a class="learnMoreMain" href="#">Find Your Life Purpose</a> -->
+						<h2>Journey To Fufillment<br></h2>
 						<a class="learnMore" href="spiritual.html">learn more</a>
 					</div>
 				</div>
-				<!-- <div class="slide" data-slide="1" style="background-image: url(images/content/homeslide2.jpg);">
-					<div class="slideDesc">
-						<h2>TAKING YOGA BEYOND <br> THE MAT training</h2>
-						<a class="learnMore" href="#">learn more</a>
-					</div>
-				</div> -->
 			</div>
 		</div>
 		<div class="homeGrid">
@@ -85,10 +89,13 @@
 					<img src="images/content/main-3.jpg" alt="">
 				</div>
 				<div class="mainItemDesc">
-					<h3>What is Spiritual Coaching?</h3>
-					<p>Spiritual coaching guides you to find inner happiness, peace and harmony. You will embark on a
-						jouney in developing a sense of empowwerment and understand your true purpose.</p>
-					<a href="spiritual.html" class="viewMore">view more</a>
+					<h3>What is Spiritual Coach?</h3>
+					<p>A spiritual coach is a professional who helps you find your life purpose, discover your intuition
+						and develop your ability to manifest ideas. I help you by taking a
+						deep, holistic spiritual approach influenced by A Course In Miracles, Buddhism and Pyrrhonian
+						Skepticism. My methods uplift your root, internal problems from within and guide you to finding
+						fulfillment in your life.</p>
+					<a href="spiritual.html" class="viewMore">Learn more</a>
 				</div>
 			</div>
 			<div class="gridItemWrap clear">
@@ -98,10 +105,9 @@
 					</div>
 					<div class="gridItemDesc">
 						<h3>About Lisa Price</h3>
-						<p>Lisa Price is a trained spiritual consultant, mentor, philosopher and teacher. She is trained
-							by the Life Purpose
-							Insitute to be a spiritual coach and has a Master's degree in Philosophy from University of
-							Nevada, Reno.
+						<p>I am dedicated to helping you get past your personal blockers, improve your quality of life
+							and guide you to find fulfillment. I am trained by the Life Purpose Institute and have a
+							Master’s degree in Philosophy from the University of Nevada, Reno.
 						</p>
 						<span class="viewMore">view more
 							<i>
@@ -140,176 +146,22 @@
 						</span>
 					</div>
 				</a>
-				<!-- <div class="gridItemWrapLeft">
-					<a href="#" class="gridItemVideo clear">
-						<div class="gridItemImg">
-							<img src="images/content/video.jpg" alt="">
-						</div>
-						<i>
-							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-								version="1.1" x="0px" y="0px" width="72px" height="72px" viewBox="-31.5 -28.5 72 72"
-								enable-background="new -31.5 -28.5 72 72" xml:space="preserve">
-								<path fill="#FFFFFF"
-									d="M-5.5-1.349C-5.5-2.537-4.508-3.5-3.284-3.5c0.38 0 0.6 0.1 1 0.26l15.553 8.8 c0.723 0.4 1.1 1.1 1.2 1.854v0.216c-0.128 0.77-0.463 1.438-1.186 1.854l-15.553 8.8 C-2.663 18.404-2.904 18.5-3.283 18.5c-1.225 0-2.217-0.964-2.217-2.151V-1.349L-5.5-1.349z" />
-							</svg>
-						</i>
-					</a>
-					<a href="#" class="gridItem gridItemWhite clear">
-						<div class="gridItemImg">
-							<img src="images/content/grid2.jpg" alt="">
-						</div>
-						<div class="gridItemDesc">
-							<h3>Ways to Be Your Own Best Teacher</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-								incididunt.</p>
-							<span class="viewMore">view more
-								<i>
-									<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-										version="1.1" x="0px" y="0px" width="9px" height="15px" viewBox="0 0 9 15"
-										enable-background="new 0 0 9 15" xml:space="preserve">
-										<path fill="#96e9d5"
-											d="M10-184.5l-0.826 0.757L1.826-177L1-177.758l7.349-6.742L1-191.243L1.826-192l7.349 6.743L10-184.5z M9.174-183.743L9.174-183.743L10-184.5L9.174-183.743z M9.175-185.257L10-184.5v0L9.175-185.257z" />
-										<path fill="#96e9d5"
-											d="M9 7.5L8.174 8.257L0.826 15L0 14.242L7.349 7.5L0 0.757L0.826 0l7.349 6.743L9 7.5z M8.174 8.3 L8.174 8.257L9 7.5L8.174 8.257z M8.175 6.743L9 7.5v0L8.175 6.743z" />
-									</svg>
-								</i>
-							</span>
-						</div>
-					</a>
+
+				<div class="classesBox" data-type="parallax" data-speed="10">
+					<!-- <a href="#" class="classesCategory">Services</a> -->
+					<h3>Schedule your free consulation</h3>
+					<p>Fill out the following information and set up a time to talk. Once you are done setting up a
+						time, please
+						check your email for your confirmation.</p>
+					<!-- Calendly inline widget begin -->
+					<div class="calendly-inline-widget" data-url="https://calendly.com/dangitjason/15min"
+						style="min-width:320px;height:630px;"></div>
+					<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"
+						async></script>
+					<!-- Calendly inline widget end -->
 				</div>
-				<div class="gridItemWrapRight">
-					<a href="#" class="gridItem2 clear">
-						<img src="images/content/gridbig.jpg" alt="">
-						<div class="gridItemDesc">
-							<h3>Simple Tips for Becoming a Master</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-								incididunt.</p>
-							<span class="viewMore">view more
-								<i>
-									<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-										version="1.1" x="0px" y="0px" width="9px" height="15px" viewBox="0 0 9 15"
-										enable-background="new 0 0 9 15" xml:space="preserve">
-										<path fill="#96e9d5"
-											d="M10-184.5l-0.826 0.757L1.826-177L1-177.758l7.349-6.742L1-191.243L1.826-192l7.349 6.743L10-184.5z M9.174-183.743L9.174-183.743L10-184.5L9.174-183.743z M9.175-185.257L10-184.5v0L9.175-185.257z" />
-										<path fill="#96e9d5"
-											d="M9 7.5L8.174 8.257L0.826 15L0 14.242L7.349 7.5L0 0.757L0.826 0l7.349 6.743L9 7.5z M8.174 8.3 L8.174 8.257L9 7.5L8.174 8.257z M8.175 6.743L9 7.5v0L8.175 6.743z" />
-									</svg>
-								</i>
-							</span>
-						</div>
-					</a>
-				</div> -->
-			</div>
-		</div>
-		<!-- <div class="shopItems">
-			<div class="blockTitle">yoga shop</div>
-			<div class="shopItemsWrap">
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem0.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem1.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem2.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem0.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem1.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-				<a href="single-product.html" class="shopItem">
-					<img src="images/content/shopitem2.jpg" alt="">
-					<div class="overlay">
-						<div class="shopItemTextWrap">
-							<p>Citron Sundial Yoga Mat (5mm)</p>
-						</div>
-						<span class="price"><span>$</span>28</span>
-					</div>
-				</a>
-			</div>
-			<a href="#" class="showAllItems">Shop all</a>
-		</div>
-		<div class="blogPosts">
-			<div class="blockTitle">blog</div>
-			<div class="blogPostWrap">
-				<div class="postItem">
-					<a href="single-post.html" class="postItemImg">
-						<img src="images/content/postimg.jpg" alt="">
-					</a>
-					<h4><a href="#">What I learned about yoga</a></h4>
-					<p>Duis aute irure dolor in reprehenderit in velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-				<div class="postItem">
-					<a href="single-post.html" class="postItemImg">
-						<img src="images/content/postimg2.jpg" alt="">
-					</a>
-					<h4><a href="single-post.html">Key benefits of being positive</a></h4>
-					<p>Duis aute irure dolor in reprehenderit in velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-				<div class="postItem">
-					<a href="single-post.html" class="postItemImg">
-						<img src="images/content/postimg3.jpg" alt="">
-					</a>
-					<h4><a href="single-post.html">Happiness starts with this habit</a></h4>
-					<p>Duis aute irure dolor in reprehenderit in velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				</div>
-			</div>
-		</div> -->
-		<div class="classesBox" data-type="parallax" data-speed="10" style="background-image: url(images/content/events-2.jpg);">
-				<a href="#" class="classesCategory">Services</a>
-				<h3>choose your classes and start <br> your training</h3>
-				<a href="#" class="viewClasses">view services</a>
-		</div>
+
+
 	</section>
 
 	<footer id="footer" class="clear">
@@ -335,12 +187,15 @@
 	</footer>
 	<div class="mobileMenu">
 		<ul>
-			<li class="current-menu-item"><a href="index.html">home</a></li>
+			<li class="current-menu-item"><a href="index.html">Home</a></li>
 			<li>
 				<a href="about.html">About Me</a>
 			</li>
 			<li>
-				<a href="classes.html">Services</a>
+				<a href="spiritual.html">Spiritual Coaching</a>
+			</li>
+			<li>
+				<a href="events.html">Services</a>
 			</li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
