--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="uk">
-	<head>
-		<title>Lisa Price - Contact</title>
-		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-		<!--[if lte IE 8]>
+
+<head>
+	<title>Lisa Price - Contact</title>
+	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<!--[if lte IE 8]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<!--[if lt IE 8]>
+	<!--[if lt IE 8]>
 			<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
 		<![endif]-->
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" type="text/css" href="css/bxslider.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/selectric.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/adaptive.css" media="screen" />
-		
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery.selectric.min.js"></script>
-		<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
-		<script type="text/javascript" src="js/script.js"></script>
-	</head>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="css/bxslider.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/selectric.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="css/adaptive.css" media="screen" />
+
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.selectric.min.js"></script>
+	<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+</head>
+
 <body class="contact">
 	<header id="header" class="clear">
 		<div class="headerWrap clear">
@@ -70,7 +72,7 @@
 					<ul>
 						<li><img src="images/content/lisa_home.jpg" alt=""></li>
 					</ul>
-					
+
 				</div>
 				<div class="contactInfo">
 					<h3>Contact</h3>
@@ -83,74 +85,91 @@
 		<div class="locationMap">
 			<!-- Map -->
 			<script type="text/javascript">
-			    // AgroMix style
-			      var Asana = [
-			          { "featureType": "road.highway", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "landscape", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "transit", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "poi", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "poi.park", "stylers": [ { "visibility": "on" } ]
-			        },{ "featureType": "poi.park", "elementType": "labels", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "poi.park", "elementType": "geometry.fill", "stylers": [ { "color": "#d3d3d3" }, { "visibility": "on" } ]
-			        },{ "featureType": "poi.medical", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "poi.medical", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "road", "elementType": "geometry.stroke", "stylers": [ { "color": "#cccccc" } ]
-			        },{ "featureType": "water", "elementType": "geometry.fill", "stylers": [ { "visibility": "on" }, { "color": "#cecece" } ]
-			        },{ "featureType": "road.local", "elementType": "labels.text.fill", "stylers": [ { "visibility": "on" }, { "color": "#808080" } ]
-			        },{ "featureType": "administrative", "elementType": "labels.text.fill", "stylers": [ { "visibility": "on" }, { "color": "#808080" } ]
-			        },{ "featureType": "road", "elementType": "geometry.fill", "stylers": [ { "visibility": "on" }, { "color": "#fdfdfd" } ]
-			        },{ "featureType": "road", "elementType": "labels.icon", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "water", "elementType": "labels", "stylers": [ { "visibility": "off" } ]
-			        },{ "featureType": "poi", "elementType": "geometry.fill", "stylers": [ { "color": "#d2d2d2" } ]
-			        }
-			      ];
-			      function initialize() {
+				// AgroMix style
+				var Asana = [
+					{
+						"featureType": "road.highway", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "landscape", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "transit", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "poi", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "poi.park", "stylers": [{ "visibility": "on" }]
+					}, {
+						"featureType": "poi.park", "elementType": "labels", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "poi.park", "elementType": "geometry.fill", "stylers": [{ "color": "#d3d3d3" }, { "visibility": "on" }]
+					}, {
+						"featureType": "poi.medical", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "poi.medical", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "road", "elementType": "geometry.stroke", "stylers": [{ "color": "#cccccc" }]
+					}, {
+						"featureType": "water", "elementType": "geometry.fill", "stylers": [{ "visibility": "on" }, { "color": "#cecece" }]
+					}, {
+						"featureType": "road.local", "elementType": "labels.text.fill", "stylers": [{ "visibility": "on" }, { "color": "#808080" }]
+					}, {
+						"featureType": "administrative", "elementType": "labels.text.fill", "stylers": [{ "visibility": "on" }, { "color": "#808080" }]
+					}, {
+						"featureType": "road", "elementType": "geometry.fill", "stylers": [{ "visibility": "on" }, { "color": "#fdfdfd" }]
+					}, {
+						"featureType": "road", "elementType": "labels.icon", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "water", "elementType": "labels", "stylers": [{ "visibility": "off" }]
+					}, {
+						"featureType": "poi", "elementType": "geometry.fill", "stylers": [{ "color": "#d2d2d2" }]
+					}
+				];
+				function initialize() {
 
-			        // Declare new style
-			        var AsanastyledMap = new google.maps.StyledMapType(Asana, {name: "Asana"});
+					// Declare new style
+					var AsanastyledMap = new google.maps.StyledMapType(Asana, { name: "Asana" });
 
-			        // Declare Map options
-			        var mapOptions = {
-			        	//center: new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>),
-			        	//zoom: <?php echo $aPostCustom['uni_zoom'][0] ?>,
-			        	center: new google.maps.LatLng(41.404182, 2.199451),
-	        			zoom: 14,
-			        	scrollwheel: false,
-			        	mapTypeControl:false,
-		                streetViewControl: false,
-		                panControl:false,
-		                rotateControl:false,
-		                zoomControl:true
-			        };
+					// Declare Map options
+					var mapOptions = {
+						//center: new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>),
+						//zoom: <?php echo $aPostCustom['uni_zoom'][0] ?>,
+						center: new google.maps.LatLng(41.404182, 2.199451),
+						zoom: 14,
+						scrollwheel: false,
+						mapTypeControl: false,
+						streetViewControl: false,
+						panControl: false,
+						rotateControl: false,
+						zoomControl: true
+					};
 
-			        // Create map
-			        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+					// Create map
+					var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
 
-			        // Setup skin for the map
-			        map.mapTypes.set('Asana_style', AsanastyledMap);
-			        map.setMapTypeId('Asana_style');
+					// Setup skin for the map
+					map.mapTypes.set('Asana_style', AsanastyledMap);
+					map.setMapTypeId('Asana_style');
 
-		            //add marker
-		            //var marker_icon = "<?php echo get_stylesheet_directory_uri().'/images/marker.svg' ?>";
-		            var marker_icon = "images/marker.svg";
-		            //var myLatLng = new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>);
-		            var myLatLng = new google.maps.LatLng(41.404182, 2.199451);
-		            var beachMarker = new google.maps.Marker({
-		                position: myLatLng,
-		                map: map,
-		                icon: marker_icon
-		            });
+					//add marker
+					//var marker_icon = "<?php echo get_stylesheet_directory_uri().'/images/marker.svg' ?>";
+					var marker_icon = "images/marker.svg";
+					//var myLatLng = new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>);
+					var myLatLng = new google.maps.LatLng(41.404182, 2.199451);
+					var beachMarker = new google.maps.Marker({
+						position: myLatLng,
+						map: map,
+						icon: marker_icon
+					});
 
-			      }
-			      google.maps.event.addDomListener(window, 'load', initialize);
-			    </script>
+				}
+				google.maps.event.addDomListener(window, 'load', initialize);
+			</script>
 
-				<div class="location-map">
-					<div class="map" id="map-canvas"></div>
-				</div>
+			<div class="location-map">
+				<div class="map" id="map-canvas"></div>
+			</div>
 		</div>
 	</section>
-	
+
 	<footer id="footer" class="clear">
 		<div class="footerSocial clear">
 			<a href="#"><i class="fa fa-facebook"></i></a>
@@ -177,19 +196,20 @@
 	<div class="mobileMenu">
 		<ul>
 			<li><a href="index.html">home</a></li>
-					<li>
-						<a href="about.html">About Me</a>
-					</li>
-					<li>
-						<a href="spiritual.html">Spiritual Coaching</a>
-					</li>
-					<li>
-						<a href="events.html">Services</a>
-					</li>
-					<li class="current-menu-item">
-						<a href="contact.html">Contact</a>
-					</li>
+			<li>
+				<a href="about.html">About Me</a>
+			</li>
+			<li>
+				<a href="spiritual.html">Spiritual Coaching</a>
+			</li>
+			<li>
+				<a href="events.html">Services</a>
+			</li>
+			<li class="current-menu-item">
+				<a href="contact.html">Contact</a>
+			</li>
 		</ul>
 	</div>
 </body>
+
 </html>
