--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						</span>
 					</div>
 				</a>
-
+			</div>
 				<div class="classesBox" data-type="parallax" data-speed="10">
 					<!-- <a href="#" class="classesCategory">Services</a> -->
 					<h3>Schedule your free consulation</h3>
