Spiritual coaching copy + header change

--- a/spiritual.html
+++ b/spiritual.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!--[if lte IE 8]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 	<!--[if lt IE 8]>
-			<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
-		<![endif]-->
+      <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
+    <![endif]-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bxslider.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="screen" />
@@ -43,10 +43,10 @@
 			<nav class="mainMenu">
 				<ul class="clear">
 					<li><a href="index.html">home</a></li>
-					<li class="current-menu-item">
+					<li>
 						<a href="about.html">About Me</a>
 					</li>
-					<li>
+					<li class="current-menu-item">
 						<a href="spiritual.html">Spiritual Coaching</a>
 					</li>
 					<li>
@@ -64,7 +64,7 @@
 		</div>
 	</header>
 	<section class="container">
-		<div class="pageHeader" style="background-image: url(images/content/main-3.jpg);">
+		<div class="pageHeader" style="background-image: url(images/content/main-3.jpg)">
 			<h1>About Spiritual Coaching</h1>
 		</div>
 		<div class="ourStory">
@@ -72,48 +72,46 @@
 				<div class="storyItem clear">
 					<div class="storyDesc">
 						<h3>What does a spiritual coach do?</h3>
-						<p>A spiritual coach, also called a spiritual life coach, explores the deeper, meaningful
-							connections between people and
-							the Universe. Spiritual coaches work closely with people to help them gain a unfound or
-							deeper understanding of themselves,
-							the world they live and the energy flowing within it. They act as a guide to helping people
-							unleashing their fullest potential through various healiong tools.
+						<p>
+							A spiritual coach explores the deeper, meaningful connections
+							between people and the Universe. Spiritual coaches work closely
+							with clients to help them gain a deeper understanding of
+							themselves, the world they live and the energy flowing within
+							it. They act as a guide to helping people unleashing their
+							fullest potential through various healing tools such as
+							meditation.
 						</p>
-						<p>You should work with a spiritual coach if your problem resides in any of the current areas:
+						<p>
+							A spiritual coach will work with root causes instead of treating
+							symptoms. By using a deep, holistic approach, spiritual coaches
+							helps you change your life by examining the system beneath your
+							consciousness.
 						</p>
-						<p>A spiritual coach will work with root causes instead of treating symptoms. Do you want to own
-							your
-							own power? Do you desire growth, love and deep satisfaction? This growth can be accomplished
-							with
-							the work of a spiritual coach at your side.
-						</p>
-						<br><br><br>
+						<br /><br /><br />
 						<h3>What can a spiritual coach help me with?</h3>
-						<p>Working with a spiritual coach will help you assess and re-program your conditioning so that
-							you are using
-							your unconsscious thinking to your advantage. If you desire to know how your mind works and
-							shift your thinking
-							for your benefit, spiritual coaching will be right for you.
-						</p>
-						<p>Do you want to consciously create the world that you live in? A lot of us are manifesting
-							things we wish we wouldn’t. Due to the principle of energy goes where attention flows,
-							humans manifest the exact thing they would like to avoid all the time.
+						<p>
 
-							For instance, you keep saying to yourself “I don’t want to be overweight.” Our minds don’t
-							understand the lack. A more powerful and clear message for our minds is, “I will make
-							healthy, nourishing decisions about the food I use to fuel my body.” Here, we focus on what
-							we want. We match our own vibration to that which we desire. We radiate a feeling of
-							nourishment, health, fuel, and we speak in a kind and loving way to ourselves, our minds,
-							and our bodies. This tiny shift is a game changer for clients when it comes to conscious
-							creation. If you feel a spark of excitement, butterflies in your stomach from possibility,
-							if you feel the calling of potential growth, a spiritual coach is for you.
 
+							A spirtual coach can help you find and make your life purpose and desires clear. They can
+							help you form a detailed, concrete plan and tools needed to help you suceed for any goal. And lastly
+							discover
+							current obstacles that are holding you back. Working with a spiritual coach will help you
+							assess and
+							re-program your conditioning so that you are using your
+							unconsscious thinking to your advantage. If you desire to know
+							how your mind works and shift your thinking for your benefit,
+							spiritual coaching will be right for you.
 						</p>
-						<br><br><br>
-						<h3>Insert Here #3</h3>
-						<p>More text [Example]
+						<p>
+							Spiritual coaches work in these primary areas:
+							<br>
+							<br>1. Developing your sense of empowerment
+							<br>2. Understand who you truly are
+							<br>3. Discovering and developing your spirituality
+							<br>4. Manifesting goals in your life
+							<br>5. Discovering appreciation and joy
+							<br>6. Learning to utilize your intuition
 						</p>
-
 					</div>
 				</div>
 			</div>
@@ -202,14 +200,14 @@
 		</div>
 		<ul class="footerMenu clear">
 			<li><a href="about.html">About Me</a></li>
-			<li><a href="#">Spiritual Coaching</a></li>
+			<li><a href="spiritual.html">Spiritual Coaching</a></li>
 			<li><a href="events.html">Services</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="footerSubscribe">
 			<form>
-				<input class="" type="text" name="" size="20" value="" placeholder="Your email">
-				<input class="btnSubscribe" type="submit" value="Subscribe">
+				<input class="" type="text" name="" size="20" value="" placeholder="Your email" />
+				<input class="btnSubscribe" type="submit" value="Subscribe" />
 			</form>
 		</div>
 		<div class="copyright">
