--- a/about.html
+++ b/about.html
@@ -103,11 +103,12 @@
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/home-3.jpg);">
-				<h3>Example 2</h3>
+				<h3>"She is very comforting and uplifting and you never feel judged..."</h3>
 			</div>
 			<div class="wrapper">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				<p>Lisa has been so amazing and helpful! She is very comforting, uplifting and you never feel judged. She is very good at
+					working on your goals and keeping contact with you to make sure your following through and keep you on the right track! - Jennie MacKenzie
+				</p>
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/home-3.jpg);">
