--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 		</div>
 	</header>
 	<section class="container">
-		<div class="pageHeader" style="background-image: url(images/content/bg-parallax2.jpg);">
+		<div class="pageHeader" style="background-image: url(images/content/header.jpg);">
 			<h1>Contact</h1>
 		</div>
 		<div class="ourContact">
