--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="slide active bg" data-slide="0">
 					<div class="slideDesc">
 						<h2>Journey To Fufillment<br></h2>
-						<a class="learnMore" href="spiritual.html">learn more</a>
+						<a href="https://dangitjason.github.io/LisaPrice/spiritual.html" class="learnMore" onclick="window.open('https://dangitjason.github.io/LisaPrice/spiritual.html', '_blank')">learn more</a>
 					</div>
 				</div>
 			</div>
@@ -127,7 +127,7 @@
 					<div class="gridItemImg">
 						<img src="images/content/grid2.jpg" alt="">
 					</div>
-					<div class="gridItemDesc">
+					<div class="gridItemDesc2">
 						<h3>My Services</h3>
 						<p>Learn more about my offerings and services and how it can serve you to finding your life
 							purpose.
