--- a/about.html
+++ b/about.html
@@ -110,14 +110,14 @@
 					working on your goals and keeping contact with you to make sure your following through and keep you on the right track! - Jennie MacKenzie
 				</p>
 			</div>
-			<div class="parallaxBox" data-type="parallax" data-speed="10"
+			<!-- <div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/home-3.jpg);">
 				<h3>Example 3</h3>
 			</div>
 			<div class="wrapper">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
 					et dolore magna aliqua. Ut enim ad minim veniam.</p>
-			</div>
+			</div> -->
 		</div>
 	</section>
 
