--- a/contact.html
+++ b/contact.html
@@ -76,96 +76,9 @@
 				</div>
 				<div class="contactInfo">
 					<h3>Contact</h3>
-					<p><i class="contactPhone"></i> 111 2222 3333</p>
-					<p><i class="contactEmail"></i> lisaprice@gmail.com</p>
-					<p><i class="contactLocation"></i> 111 Milk Street <br> NY 10118, United States</p>
+					<p><i class="contactPhone"></i> 707-304-2699</p>
+					<p><i class="contactEmail"></i> lisa.loveandpeace01@gmail.com</p>
 				</div>
-			</div>
-		</div>
-		<div class="locationMap">
-			<!-- Map -->
-			<script type="text/javascript">
-				// AgroMix style
-				var Asana = [
-					{
-						"featureType": "road.highway", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "landscape", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "transit", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "poi", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "poi.park", "stylers": [{ "visibility": "on" }]
-					}, {
-						"featureType": "poi.park", "elementType": "labels", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "poi.park", "elementType": "geometry.fill", "stylers": [{ "color": "#d3d3d3" }, { "visibility": "on" }]
-					}, {
-						"featureType": "poi.medical", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "poi.medical", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "road", "elementType": "geometry.stroke", "stylers": [{ "color": "#cccccc" }]
-					}, {
-						"featureType": "water", "elementType": "geometry.fill", "stylers": [{ "visibility": "on" }, { "color": "#cecece" }]
-					}, {
-						"featureType": "road.local", "elementType": "labels.text.fill", "stylers": [{ "visibility": "on" }, { "color": "#808080" }]
-					}, {
-						"featureType": "administrative", "elementType": "labels.text.fill", "stylers": [{ "visibility": "on" }, { "color": "#808080" }]
-					}, {
-						"featureType": "road", "elementType": "geometry.fill", "stylers": [{ "visibility": "on" }, { "color": "#fdfdfd" }]
-					}, {
-						"featureType": "road", "elementType": "labels.icon", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "water", "elementType": "labels", "stylers": [{ "visibility": "off" }]
-					}, {
-						"featureType": "poi", "elementType": "geometry.fill", "stylers": [{ "color": "#d2d2d2" }]
-					}
-				];
-				function initialize() {
-
-					// Declare new style
-					var AsanastyledMap = new google.maps.StyledMapType(Asana, { name: "Asana" });
-
-					// Declare Map options
-					var mapOptions = {
-						//center: new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>),
-						//zoom: <?php echo $aPostCustom['uni_zoom'][0] ?>,
-						center: new google.maps.LatLng(41.404182, 2.199451),
-						zoom: 14,
-						scrollwheel: false,
-						mapTypeControl: false,
-						streetViewControl: false,
-						panControl: false,
-						rotateControl: false,
-						zoomControl: true
-					};
-
-					// Create map
-					var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-
-					// Setup skin for the map
-					map.mapTypes.set('Asana_style', AsanastyledMap);
-					map.setMapTypeId('Asana_style');
-
-					//add marker
-					//var marker_icon = "<?php echo get_stylesheet_directory_uri().'/images/marker.svg' ?>";
-					var marker_icon = "images/marker.svg";
-					//var myLatLng = new google.maps.LatLng(<?php echo $aPostCustom['uni_coordinates'][0] ?>);
-					var myLatLng = new google.maps.LatLng(41.404182, 2.199451);
-					var beachMarker = new google.maps.Marker({
-						position: myLatLng,
-						map: map,
-						icon: marker_icon
-					});
-
-				}
-				google.maps.event.addDomListener(window, 'load', initialize);
-			</script>
-
-			<div class="location-map">
-				<div class="map" id="map-canvas"></div>
 			</div>
 		</div>
 	</section>
