--- a/events.html
+++ b/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <title>Lisa Price - Events</title>
+    <title>Lisa Price - Services</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta
       name="viewport"
