--- a/spiritual.html
+++ b/spiritual.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Lisa Price - Spiritual</title>
+	<title>Lisa Price - Spiritual Coaching</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!--[if lte IE 8]>
