--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 					<div class="storyImg">
 						<img src="images/content/lisa_profile.jpg" alt="">
 					</div>
-					<div class="aboutDesc">
+					<div class="storyDesc">
 						<h3>My Story</h3>
 						<p>I originally sought this profession because I desired the experience of a spiritual awakening
 							and ultimately reaching enlightenment. In my pursuit of this goal, I encountered many
