--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<img src="images/content/main-3.jpg" alt="">
 				</div>
 				<div class="mainItemDesc">
-					<h3>What is Spiritual Coach?</h3>
+					<h3>What is a Spiritual Coach?</h3>
 					<p>A spiritual coach is a professional who helps you find your life purpose, discover your intuition
 						and develop your ability to manifest ideas. I help you by taking a
 						deep, holistic spiritual approach influenced by A Course In Miracles, Buddhism and Pyrrhonian
