--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 				</div>
 				<div class="contactInfo">
 					<h3>Contact</h3>
-					<p><i class="contactPhone"></i> 707-304-2699</p>
+					<p><i class="contactPhone"></i> (775) 343-6827</p>
 					<p><i class="contactEmail"></i> lisa.loveandpeace01@gmail.com</p>
 				</div>
 			</div>
