requeted updates - new event desc + event header

--- a/about.html
+++ b/about.html
@@ -85,6 +85,10 @@
 						<p> I am trained by the Life Purpose Institute and have a Master’s degree in Philosophy from the
 							University of Nevada, Reno.
 						</p>
+						<p>
+						  I am not a licensed therapist. If you are suffering from mental health issues, then I encourage you to proceed
+						  by contacting the appropriate licensed medical professional.
+						</p>
 					</div>
 				</div>
 			</div>
