Fixes to android native devices

--- a/events.html
+++ b/events.html
@@ -163,10 +163,10 @@
                 <h2>Week 2: Meditation</h2>
               </div>
               <div style="width: 400px; float: left">
-                <h2>Week 3: Self-Love</h2>
+                <h2>Week 3: Inner Child Work</h2>
               </div>
               <div style="width: 400px; float: left">
-                <h2>Week 4: Inner-Child Work</h2>
+                <h2>Week 4: Self-Love</h2>
               </div>
               <div style="width: 400px; float: left">
                 <h2>Week 5: Shadow Work</h2>
