--- a/index.html
+++ b/index.html
@@ -154,10 +154,8 @@
 						time, please
 						check your email for your confirmation.</p>
 					<!-- Calendly inline widget begin -->
-					<div class="calendly-inline-widget" data-url="https://calendly.com/lisa-loveandpeace01/15min"
-						style="min-width:320px;height:630px;"></div>
-					<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"
-						async></script>
+					<div class="calendly-inline-widget" data-url="https://calendly.com/innerpeacecoachinglisa" style="min-width:320px;height:630px;"></div>
+					<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 					<!-- Calendly inline widget end -->
 				</div>
 
