--- a/events.html
+++ b/events.html
@@ -116,8 +116,7 @@
                 way. They fail to break through bad habits or simply don’t feel
                 motivated. The purpose of working with a professional is to take
                 yourself beyond the theoretical by making it a practical
-                experience. Think of it like enrolling in a spiritual self-help
-                course.
+                experience. Think of it like enrolling in a self-help course.
               </p>
               <br />
               <p>
